# fuzzy-elevator

./: .gitignore  hello.py  notebook.ipynb  pyproject.toml
fuzzy_elevator/: config.py  elevator.py  objects.py
fuzzy_elevator/fuzzy/: model.py  rules.py  variables.py
