[project]
name = "fuzzy-elevator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.3.1",
    "matplotlib>=3.9.3",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "pydantic>=2.10.1",
    "scikit-fuzzy>=0.5.0",
    "scipy>=1.14.1",
]
